# 8086-simulator

./: CMakeLists.txt  README.md  build.zig  build.zig.zon
.jj/working_copy/: checkout  tree_state
include/: decoder.h
src/: decoder.c  decoder.zig  main.c  main.zig
tests/: load_immediat  load_immediat.asm  main.c
